antlr/JsonParser.py
# Generated from Json.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class JsonParser ( Parser ):

    grammarFileName = "Json.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "','", "'{'", "'}'", "'\"'", "':'", "'+'", 
                     "'['", "']'", "'true'", "'false'", "'null'", "'('", 
                     "')'", "'$'", "'.'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "STRING", "NUMBER", "WS" ]

    RULE_json = 0
    RULE_object = 1
    RULE_pair = 2
    RULE_pairValues = 3
    RULE_array = 4
    RULE_value = 5
    RULE_function = 6
    RULE_argument = 7
    RULE_functionName = 8

    ruleNames =  [ "json", "object", "pair", "pairValues", "array", "value", 
                   "function", "argument", "functionName" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    STRING=16
    NUMBER=17
    WS=18

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class JsonContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def object(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JsonParser.ObjectContext)
            else:
                return self.getTypedRuleContext(JsonParser.ObjectContext,i)


        def getRuleIndex(self):
            return JsonParser.RULE_json

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterJson" ):
                listener.enterJson(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitJson" ):
                listener.exitJson(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitJson" ):
                return visitor.visitJson(self)
            else:
                return visitor.visitChildren(self)




    def json(self):

        localctx = JsonParser.JsonContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_json)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 22 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 18
                self.object()

                self.state = 20
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==JsonParser.T__0:
                    self.state = 19
                    self.match(JsonParser.T__0)


                self.state = 24 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==JsonParser.T__1):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ObjectContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def pair(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JsonParser.PairContext)
            else:
                return self.getTypedRuleContext(JsonParser.PairContext,i)


        def getRuleIndex(self):
            return JsonParser.RULE_object

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterObject" ):
                listener.enterObject(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitObject" ):
                listener.exitObject(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitObject" ):
                return visitor.visitObject(self)
            else:
                return visitor.visitChildren(self)




    def object(self):

        localctx = JsonParser.ObjectContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_object)
        self._la = 0 # Token type
        try:
            self.state = 39
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 26
                self.match(JsonParser.T__1)
                self.state = 27
                self.pair()
                self.state = 32
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==JsonParser.T__0:
                    self.state = 28
                    self.match(JsonParser.T__0)
                    self.state = 29
                    self.pair()
                    self.state = 34
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 35
                self.match(JsonParser.T__2)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 37
                self.match(JsonParser.T__1)
                self.state = 38
                self.match(JsonParser.T__2)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PairContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(JsonParser.STRING, 0)

        def pairValues(self):
            return self.getTypedRuleContext(JsonParser.PairValuesContext,0)


        def getRuleIndex(self):
            return JsonParser.RULE_pair

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPair" ):
                listener.enterPair(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPair" ):
                listener.exitPair(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPair" ):
                return visitor.visitPair(self)
            else:
                return visitor.visitChildren(self)




    def pair(self):

        localctx = JsonParser.PairContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_pair)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            self.match(JsonParser.T__3)
            self.state = 42
            self.match(JsonParser.STRING)
            self.state = 43
            self.match(JsonParser.T__3)
            self.state = 44
            self.match(JsonParser.T__4)
            self.state = 45
            self.pairValues()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PairValuesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JsonParser.ValueContext)
            else:
                return self.getTypedRuleContext(JsonParser.ValueContext,i)


        def function(self):
            return self.getTypedRuleContext(JsonParser.FunctionContext,0)


        def getRuleIndex(self):
            return JsonParser.RULE_pairValues

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPairValues" ):
                listener.enterPairValues(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPairValues" ):
                listener.exitPairValues(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPairValues" ):
                return visitor.visitPairValues(self)
            else:
                return visitor.visitChildren(self)




    def pairValues(self):

        localctx = JsonParser.PairValuesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_pairValues)
        self._la = 0 # Token type
        try:
            self.state = 72
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 47
                self.match(JsonParser.T__3)
                self.state = 48
                self.value()
                self.state = 49
                self.match(JsonParser.T__3)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 58
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==JsonParser.T__3:
                    self.state = 51
                    self.match(JsonParser.T__3)
                    self.state = 52
                    self.value()
                    self.state = 53
                    self.match(JsonParser.T__3)
                    self.state = 54
                    self.match(JsonParser.T__5)
                    self.state = 60
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 61
                self.function()
                self.state = 69
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==JsonParser.T__5:
                    self.state = 62
                    self.match(JsonParser.T__5)
                    self.state = 63
                    self.match(JsonParser.T__3)
                    self.state = 64
                    self.value()
                    self.state = 65
                    self.match(JsonParser.T__3)
                    self.state = 71
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JsonParser.ValueContext)
            else:
                return self.getTypedRuleContext(JsonParser.ValueContext,i)


        def getRuleIndex(self):
            return JsonParser.RULE_array

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArray" ):
                listener.enterArray(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArray" ):
                listener.exitArray(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray" ):
                return visitor.visitArray(self)
            else:
                return visitor.visitChildren(self)




    def array(self):

        localctx = JsonParser.ArrayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_array)
        self._la = 0 # Token type
        try:
            self.state = 87
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 74
                self.match(JsonParser.T__6)
                self.state = 75
                self.value()
                self.state = 80
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==JsonParser.T__0:
                    self.state = 76
                    self.match(JsonParser.T__0)
                    self.state = 77
                    self.value()
                    self.state = 82
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 83
                self.match(JsonParser.T__7)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 85
                self.match(JsonParser.T__6)
                self.state = 86
                self.match(JsonParser.T__7)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(JsonParser.STRING, 0)

        def NUMBER(self):
            return self.getToken(JsonParser.NUMBER, 0)

        def object(self):
            return self.getTypedRuleContext(JsonParser.ObjectContext,0)


        def array(self):
            return self.getTypedRuleContext(JsonParser.ArrayContext,0)


        def getRuleIndex(self):
            return JsonParser.RULE_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValue" ):
                listener.enterValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValue" ):
                listener.exitValue(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitValue" ):
                return visitor.visitValue(self)
            else:
                return visitor.visitChildren(self)




    def value(self):

        localctx = JsonParser.ValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_value)
        try:
            self.state = 96
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [JsonParser.STRING]:
                self.enterOuterAlt(localctx, 1)
                self.state = 89
                self.match(JsonParser.STRING)
                pass
            elif token in [JsonParser.NUMBER]:
                self.enterOuterAlt(localctx, 2)
                self.state = 90
                self.match(JsonParser.NUMBER)
                pass
            elif token in [JsonParser.T__1]:
                self.enterOuterAlt(localctx, 3)
                self.state = 91
                self.object()
                pass
            elif token in [JsonParser.T__6]:
                self.enterOuterAlt(localctx, 4)
                self.state = 92
                self.array()
                pass
            elif token in [JsonParser.T__8]:
                self.enterOuterAlt(localctx, 5)
                self.state = 93
                self.match(JsonParser.T__8)
                pass
            elif token in [JsonParser.T__9]:
                self.enterOuterAlt(localctx, 6)
                self.state = 94
                self.match(JsonParser.T__9)
                pass
            elif token in [JsonParser.T__10]:
                self.enterOuterAlt(localctx, 7)
                self.state = 95
                self.match(JsonParser.T__10)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def functionName(self):
            return self.getTypedRuleContext(JsonParser.FunctionNameContext,0)


        def argument(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JsonParser.ArgumentContext)
            else:
                return self.getTypedRuleContext(JsonParser.ArgumentContext,i)


        def function(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JsonParser.FunctionContext)
            else:
                return self.getTypedRuleContext(JsonParser.FunctionContext,i)


        def getRuleIndex(self):
            return JsonParser.RULE_function

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction" ):
                listener.enterFunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction" ):
                listener.exitFunction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction" ):
                return visitor.visitFunction(self)
            else:
                return visitor.visitChildren(self)




    def function(self):

        localctx = JsonParser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_function)
        self._la = 0 # Token type
        try:
            self.state = 123
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 98
                self.functionName()
                self.state = 99
                self.match(JsonParser.T__11)
                self.state = 100
                self.match(JsonParser.T__12)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 102
                self.functionName()
                self.state = 103
                self.match(JsonParser.T__11)
                self.state = 108 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 104
                    self.argument()

                    self.state = 106
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==JsonParser.T__0:
                        self.state = 105
                        self.match(JsonParser.T__0)


                    self.state = 110 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==JsonParser.STRING or _la==JsonParser.NUMBER):
                        break

                self.state = 112
                self.match(JsonParser.T__12)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 114
                self.functionName()
                self.state = 115
                self.match(JsonParser.T__11)
                self.state = 117 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 116
                    self.function()
                    self.state = 119 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==JsonParser.T__13 or _la==JsonParser.STRING):
                        break

                self.state = 121
                self.match(JsonParser.T__12)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgumentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(JsonParser.STRING, 0)

        def NUMBER(self):
            return self.getToken(JsonParser.NUMBER, 0)

        def getRuleIndex(self):
            return JsonParser.RULE_argument

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArgument" ):
                listener.enterArgument(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArgument" ):
                listener.exitArgument(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArgument" ):
                return visitor.visitArgument(self)
            else:
                return visitor.visitChildren(self)




    def argument(self):

        localctx = JsonParser.ArgumentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_argument)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            _la = self._input.LA(1)
            if not(_la==JsonParser.STRING or _la==JsonParser.NUMBER):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionNameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self, i:int=None):
            if i is None:
                return self.getTokens(JsonParser.STRING)
            else:
                return self.getToken(JsonParser.STRING, i)

        def getRuleIndex(self):
            return JsonParser.RULE_functionName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionName" ):
                listener.enterFunctionName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionName" ):
                listener.exitFunctionName(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionName" ):
                return visitor.visitFunctionName(self)
            else:
                return visitor.visitChildren(self)




    def functionName(self):

        localctx = JsonParser.FunctionNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_functionName)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==JsonParser.T__13:
                self.state = 127
                self.match(JsonParser.T__13)


            self.state = 134 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 130
                self.match(JsonParser.STRING)

                self.state = 132
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==JsonParser.T__14:
                    self.state = 131
                    self.match(JsonParser.T__14)


                self.state = 136 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==JsonParser.STRING):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





